--- a/farida.html
+++ b/farida.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	  <title>SIMP</title>
+	  <title>Crush</title>
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -512,7 +512,7 @@
 			}
 			function specialEffects(){
 				if(localStorage.getItem("manualColor")=="#4c1130"){
-					setTimeout(function() { createNote("Mangat yaa ngepush course javascriptnya :v"); }, 5000);
+					setTimeout(function() { createNote("Sorry yaa , Gabutku gini-gini doang kok wkwk.. jadi fungsi webnya cuma buat pengingat aja kok , tiap waktu tulisannya bakal keganti otomatis gituuu"); }, 5000);
 				}
 				else if(localStorage.getItem("manualColor")=="#000000"){
 					setTimeout(function() { createNote("Makasih udah selalu jadi moodboster aku kalo lagi diterpa banyak tugas wkwk :), rajin-rajin kuliahnya jangan banyak ngeluh yaa mangadd!!! dan ibadahnya jangan lupa. Kita sekarang dah dewasa , dah bisa memilih mana yg baik dan buruk , kalo ngomongin perasaan sih gaush ditanyain lagi wkkw mana yg baik aja .. smoga pandemik ini cepat berlalu dan kita bisa jumpa lagii , ngobrol bareng  CemaraFamily , sharing dan hal lainnya yaaa .. oiya btw web ini aku buat sebulan yg lalu jadi baru selese sekarang wkwk. So, thanks for coming and seeing this, luv u ❤❤❤ "); }, 10000);
@@ -873,7 +873,7 @@
 				S=s;
 
 				if (H<5){
-					txt='Have a Good Night:)';
+					txt='Have a Good Night yaaa :)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
@@ -885,7 +885,7 @@
 					txt2=txt;
 				}
 				else if(H<12){
-					txt='Be Happy Today:)';
+					txt='Be Happy Today, Faridaaa:)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
