--- a/farida.html
+++ b/farida.html
@@ -225,14 +225,14 @@
 				position: fixed;
         top: 780px;
 				left: 20px;
-        border: 1px solid #000;
+        border: 0px solid #000;
 				-webkit-transition:all 0.5s linear;
 				-moz-transition:all 0.5s linear;
 				-o-transition:all 0.5s linear;
 				transition:all 0.5s linear;
-				-moz-box-shadow: 2px 2px 4px 0px #006773;
-				-webkit-box-shadow:  2px 2px 4px 0px #006773;
-				box-shadow: 2px 2px 4px 0px #006773;
+				-moz-box-shadow: 2px 2px 4px 0px #000;
+				-webkit-box-shadow:  2px 2px 4px 0px #000;
+				box-shadow: 2px 2px 4px 0px #000;
 				-moz-border-radius:7px 7px 7px 7px ;
 				-webkit-border-radius:7px 7px 7px 7px ;
 				border-radius:7px 7px 7px 7px ;
@@ -1076,7 +1076,7 @@
 		</script>
 
 		<audio controls autoplay>
-			<source src="saranghae.mp3" type="audio/mpeg" ></source>
+			<source src="saranghae.mp3" type="audio/mpeg" >
 		</audio>
 
 	</body>
