--- a/farida.html
+++ b/farida.html
@@ -220,9 +220,10 @@
 				-webkit-transform: scale(1.05);
 				-moz-transform: scale(1.05);
 				transform: scale(1.05);
-}
+			}
 			audio{
 				position: fixed;
+				width: 200px;
         top: 780px;
 				left: 20px;
         border: 0px solid #000;
@@ -413,6 +414,11 @@
 			<div class="note"Bogeng</div>
 			<div class="pengembang">Andika Sujanadi</div>
 		</div>
+
+		<audio controls autoplay>
+			<source src="saranghae.mp3" type="audio/mpeg" >
+		</audio>
+
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -1075,9 +1081,6 @@
 			typeWriter();
 		</script>
 
-		<audio controls autoplay>
-			<source src="saranghae.mp3" type="audio/mpeg" >
-		</audio>
 
 	</body>
 </html>
