--- a/farida.html
+++ b/farida.html
@@ -98,7 +98,8 @@
 	  		z-index: 2;
 	  	}
 	  	.kontrol{
-	  		margin: 20px;
+	  		margin: 10px;
+				top: 70px;
 	  		background: #fff;
 	  		padding: 20px;
 	  		position: absolute;
@@ -222,9 +223,9 @@
 				transform: scale(1.05);
 			}
 			audio{
-				position: fixed;
+				position:  absolute;
 				width: 200px;
-        top: 780px;
+        top: 5px;
 				left: 20px;
         border: 0px solid #000;
 				-webkit-transition:all 0.5s linear;
@@ -418,7 +419,6 @@
 		<audio controls autoplay>
 			<source src="saranghae.mp3" type="audio/mpeg" >
 		</audio>
-
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
