--- a/farida.html
+++ b/farida.html
@@ -545,20 +545,20 @@
 			}
 			function specialEffects(){
 				if(localStorage.getItem("manualColor")=="#4c1130"){
-					setTimeout(function() { createNote("Sorry yaa , Gabutku gini-gini doang kok wkwk.. jadi fungsi webnya cuma buat pengingat aja kok , tiap waktu tulisannya bakal keganti otomatis gituuu"); }, 5000);
+					setTimeout(function() { createNote("Mangaddd Kuliahnyaa 😅😅❤❤"); }, 5000);
 				}
 				else if(localStorage.getItem("manualColor")=="#000000"){
-					setTimeout(function() { createNote("Makasih udah selalu jadi moodboster aku kalo lagi diterpa banyak tugas wkwk :), rajin-rajin kuliahnya jangan banyak ngeluh yaa mangadd!!! dan ibadahnya jangan lupa. Kita sekarang dah dewasa , dah bisa memilih mana yg baik dan buruk , kalo ngomongin perasaan sih gaush ditanyain lagi wkkw mana yg baik aja .. smoga pandemik ini cepat berlalu dan kita bisa jumpa lagii , ngobrol bareng  CemaraFamily , sharing dan hal lainnya yaaa .. oiya btw web ini aku buat sebulan yg lalu jadi baru selese sekarang wkwk. So, thanks for coming and seeing this, luv u ❤❤❤ "); }, 10000);
+					setTimeout(function() { createNote("Makasih udah selalu jadi moodbosterkuuu ❤❤❤"); }, 10000);
 				}
 			}
 			function createNote(isi){
-				$(".jam").css("font-size","30pt").css("bottom","calc( 50% - 250px )");
+				$(".jam").css("font-size","30pt").css("bottom","calc( 50% - 150px )");
 				$(".ucapan").css("opacity","0");
 				$(".quotes").css("opacity","0");
 				$(".quotes").css("opacity","0");
 				$(".bulat").css("opacity","0");
 				$(".kotak li").css("opacity","0");
-				setTimeout(function() { writeNote(isi); }, 3000);
+				setTimeout(function() { writeNote(isi); }, 2000);
 			}
 			function writeNote(isi){
 				$(".note").text(isi).css("opacity","1");
