--- a/index.html
+++ b/index.html
@@ -7,12 +7,43 @@
     <link rel="stylesheet" href="bootstrap.min.css"> -->
     <link rel="shortcut icon" type="image/png" href="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/71501805_2572202106396839_660841612535922688_n.jpg?_nc_cat=103&_nc_oc=AQmNr4e8fACv_OLiNZE7Wxa_nDYAp3fzYFvCwp5fDTD5UwX26KZHRtYEH1mY0UDU6TM&_nc_ht=scontent-hkg3-1.xx&oh=ba29ee69a04e9b4576f3437b8cf119bb&oe=5E314F3B"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <style type="text/css">html{scroll-behavior: smooth;}div{transition: 0.3s all ease;}</style>
+    <style type="text/css">
+    html{scroll-behavior: smooth;}div{transition: 0.3s all ease;}
+    .sosmed {
+    	position: fixed;
+    	z-index:9;
+    	width: 100%;
+    	text-align: center;
+    	bottom: 0;
+    }
+
+    .isi-sosmed {
+    	height: 50px;
+    	width:20%;
+    	margin-left: auto;
+    	margin-right: auto;
+    	padding:2px ;
+    	color:#fff;
+    	/* margin:5px auto; */
+    	background: rgba(255,255,255,0.8);
+    	border-top-left-radius: 15px;
+    	border-top-right-radius: 15px;
+    	/* background: #504a4a; */
+    	text-align: center;
+    	/* display: inline-block; */
+    }
+
+    .isi-sosmed a img {
+    	margin-top: 6px;
+    	margin-right: 6px;
+    	max-width: 40px;
+    }
+    </style>
     <title>Dedi Novrianto Ramadhan</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">Dedi</a>
+      <a class="navbar-brand" href="#">Dedi Portofolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,6 +55,14 @@
           <a class="nav-item nav-link disabled" href="#">Soon</a>
         </div>
       </div>
+      <div class="sosmed">
+        <div class="isi-sosmed">
+          <a href="https://github.com/novrianto" target="_blank"><img src="./assets/images/github.png"> </a>
+          <a href="https://api.whatsapp.com/send?phone=6281261783254&text=Assalamualaikum" target="_blank"><img src="./assets/images/wa2.png"></a>
+          <a href="https://www.instagram.com/dedi.novrianto/?hl=id" target="_blank"><img src="./assets/images/ig.png"> </a>
+          <a href="mailto:dedinovrianto60@gmail.com" target="_blank"><img src="./assets/images/gmail.png"></a>
+          <a href="https://www.facebook.com/Dedi.novriantoo?ref=bookmarks" target="_blank"><img style="width:38px;" src="./assets/images/fb.png"></a>
+        </div>
     </nav>
     <div class="container" style="margin-top: 5em">
       <div class="row">
